objects/Box_Folder_Structure__c.object
<CustomObject>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Custom Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Collaboration_Id__c</fullName>
        <label>External Collaboration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Level__c</fullName>
        <label>Folder Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Type__c</fullName>
        <label>Folder Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Agreement Agency Transfer</fullName>
                </value>
                <value>
                    <fullName>Agreement Legal</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Condition Precedent</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Default Legal Matter type</fullName>
                </value>
                <value>
                    <fullName>Drawdown</fullName>
                </value>
                <value>
                    <fullName>Drawdown ReadOnly</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Facility Agency Transfer</fullName>
                </value>
                <value>
                    <fullName>Financial Covenant</fullName>
                </value>
                <value>
                    <fullName>General Undertaking</fullName>
                </value>
                <value>
                    <fullName>Governance Check</fullName>
                </value>
                <value>
                    <fullName>Information Undertaking</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Legal (Off Panel)</fullName>
                </value>
                <value>
                    <fullName>Legal Quote</fullName>
                </value>
                <value>
                    <fullName>Legal Quote (Locked)</fullName>
                </value>
                <value>
                    <fullName>Legal Request</fullName>
                </value>
                <value>
                    <fullName>Litigation (Off Panel)</fullName>
                </value>
                <value>
                    <fullName>Litigation Matter</fullName>
                </value>
                <value>
                    <fullName>Litigation Quote</fullName>
                </value>
                <value>
                    <fullName>Litigation Quote (Locked)</fullName>
                </value>
                <value>
                    <fullName>Litigation Request</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Off Panel Quote</fullName>
                </value>
                <value>
                    <fullName>Off Panel Quote (Locked)</fullName>
                </value>
                <value>
                    <fullName>Read Only Agreement</fullName>
                </value>
                <value>
                    <fullName>Read-Only Legal Hold (Legal RT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Hold_Policy_Id__c</fullName>
        <label>Legal Hold Policy Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Hold_Policy_Name__c</fullName>
        <label>Legal Hold Policy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Record_Type__c</fullName>
        <label>Group Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Litigation Matter</fullName>
                </value>
                <value>
                    <fullName>Default Legal Matter type</fullName>
                </value>
                <value>
                    <fullName>Legal Quote</fullName>
                </value>
                <value>
                    <fullName>Litigation Quote</fullName>
                </value>
                <value>
                    <fullName>Legal RT</fullName>
                </value>
                <value>
                    <fullName>Litigation RT</fullName>
                </value>
                <value>
                    <fullName>Collaterals</fullName>
                </value>
                <value>
                    <fullName>Knowledge Management</fullName>
                </value>
                <value>
                    <fullName>Market Transaction</fullName>
                </value>
                <value>
                    <fullName>Market Transaction - Prime Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Lookup__c</fullName>
        <label>Parent Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matter_Deal__c</fullName>
                </value>
                <value>
                    <fullName>Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Matter__c</fullName>
                </value>
                <value>
                    <fullName>Legal_Quote_Request__c</fullName>
                </value>
                <value>
                    <fullName>Condition__c</fullName>
                </value>
                <value>
                    <fullName>Facility__c</fullName>
                </value>
                <value>
                    <fullName>Facility_Tranche__c</fullName>
                </value>
                <value>
                    <fullName>Collateral_Valuation__c</fullName>
                </value>
                <value>
                    <fullName>Collateral__c</fullName>
                </value>
                <value>
                    <fullName>Collateral_Monitoring__c</fullName>
                </value>
                <value>
                    <fullName>Margin_Ratchet__c</fullName>
                </value>
                <value>
                    <fullName>Trigger__c</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Structure</label>
        <referenceTo>Box_Folder_Structure__c</referenceTo>
        <relationshipLabel>Box Folder Structures</relationshipLabel>
        <relationshipName>Box_Folder_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_Folder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Static Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webhook_Triggers__c</fullName>
        <label>Webhook Triggers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FILE.UPLOADED</fullName>
                </value>
                <value>
                    <fullName>FILE.PREVIEWED</fullName>
                </value>
                <value>
                    <fullName>FILE.DOWNLOADED</fullName>
                </value>
                <value>
                    <fullName>FILE.TRASHED</fullName>
                </value>
                <value>
                    <fullName>FILE.DELETED</fullName>
                </value>
                <value>
                    <fullName>FILE.RESTORED</fullName>
                </value>
                <value>
                    <fullName>FILE.COPIED</fullName>
                </value>
                <value>
                    <fullName>FILE.MOVED</fullName>
                </value>
                <value>
                    <fullName>FILE.LOCKED</fullName>
                </value>
                <value>
                    <fullName>FILE.UNLOCKED</fullName>
                </value>
                <value>
                    <fullName>METADATA_INSTANCE.CREATED</fullName>
                </value>
                <value>
                    <fullName>METADATA_INSTANCE.UPDATED</fullName>
                </value>
                <value>
                    <fullName>METADATA_INSTANCE.DELETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webhook_URL__c</fullName>
        <description>The url that box will use to send webhook notifications/triggers</description>
        <label>Webhook URL</label>
        <type>Url</type>
    </fields>
    <label>Box Folder Structure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box Folder Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>